[tool.poetry]
name = "test_api_google_bot"
version = "0.1.0"
description = ""
authors = ["Artem <uzapolsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
